--- a/Table_Hypotheses.Rmd
+++ b/Table_Hypotheses.Rmd
@@ -11,125 +11,127 @@ header-includes: \usepackage[labelformat=empty]{caption}
 ```
 
 ```{r print-table-hyp, echo=FALSE, warning=FALSE}
+# Note to use, knit to pdf and edit the tex file to remove the header
+# up to the \begin{table}
 
-thecap = "Hypotheses for covariates affecting landings.  See text for details."
+thecap = "Hypotheses for covariates affecting landings.  $S_t$ is quarter 3 (July-September) catch in the current season, $S_{t-1}$ is quarter 3 catch in the previous season. $N_t$ is the post-monsoon October-March catch in the current season and $N_{t-1}$ is the October-March catch in the prior season. Because the fishing season is July-June, $N_t$ spans two calendar years."
 
 fullcap = paste("Table ", ref("tab:hypotheses"), ". ", thecap, sep="")
 
 DD1 = data.frame(
   Life="Age 2+",
   Time="Jun-Sep",
-  Hyp="HDD1.  Q3 catch is dominated by mature age 2+ fish, thus abundance of the 1-yr and 2-yr ages in the prior season should be correlated with the abundance of spawners this year.",
-  Response="Catch Q3 year t",
-  Cov="Catch Q4 year t-1 and Q1-2 year t",
+  Hyp="DD1.  $S_t$ is dominated by mature age 2+ fish, thus abundance of the 1-yr and 2-yr ages in the prior season (Oct-Jun catch) should be correlated with the abundance of mature fish this year.",
+  Response="$S_t$",
+  Cov="$N_{t-1}$",
   stringsAsFactors=FALSE)
 
 DD2 = data.frame(
   Life="Age 1-2",
   Time="Oct-May",
-  Hyp="HDD2.  Abundance of 1-yr and 2-yr fish should be correlated with strength of the cohorts from the previous two seasons.  The catch in Q3 is dominated by mature fish, thus catch in Q3 in the prior two years is expected to be correlated with post-monsoon catch.",
-  Response="Catch Q4 year t and Q1-2 year t+1",
-  Cov="Catch Q3 year t-1 and year t-2",
+  Hyp="DD2.  Abundance of 1-yr and 2-yr fish should be correlated with strength of the cohorts from the previous two seasons.  The quarter 3 catch, dominated by mature fish, in the prior two years is expected to be correlated with post-monsoon catch.",
+  Response="$N_t$",
+  Cov="$S_{t-1}$ and $S_{t-2}$",
   stringsAsFactors=FALSE)
 
 DD3 = data.frame(
   Life="Age 2+",
   Time="Oct-May",
-  Hyp="HDD3.  Because age 2 fish also appear in the post-monsoon catch, we also expect the post-monsoon catch in the previous season to be correlated with the post-monsoon catch in the current season.",
-  Response="Catch Q4 year t and Q1-2 year t+1",
-  Cov="Catch Q4 year t-1 and Q1-2 year t",
+  Hyp="DD3.  Because age 2 fish also appear in the post-monsoon catch, we also expect the post-monsoon catch in the previous season to be correlated with the post-monsoon catch in the current season.",
+  Response="$N_t$",
+  Cov="$N_{t-1}$",
   stringsAsFactors=FALSE)
 
 HS1 = data.frame(
   Life="Spawn",
   Time="Jun-Sep",
-  Hyp="HS1.  The onset of monsoon precipitation triggers movement of adults from offshore to spawning areas due to changes in salinity, turbulence or noise. Spent adults migrate inshore and are exposed to the fishery.",
-  Response="Catch Q3 year t",
+  Hyp="S1.  The onset of monsoon precipitation triggers movement of adults from offshore to spawning areas due to changes in salinity, turbulence or noise. Spent adults migrate inshore and are exposed to the fishery.",
+  Response="$S_t$",
   Cov="Seasonal precipitation anomaly during Jun-Jul in year t",
   stringsAsFactors=FALSE)
 
 HS2 = data.frame(
-  Life="",
-  Time="",
-  Hyp="HS2.  The level of precipitation in pre-monsoon predicts spawning strength.",
-  Response="Catch Q3 year t",
+  Life="Spawn",
+  Time="Jun-Sep",
+  Hyp="S2.  The level of precipitation in pre-monsoon predicts spawning strength.",
+  Response="$S_t$",
   Cov="Seasonal precipitation anomaly during Apr-May in year t",
   stringsAsFactors=FALSE)
 
 HS3 = data.frame(
-  Life="",
-  Time="",
-  Hyp="HS3.  Low SST is associated with delayed and limited spawning [@JacobsonMacCall1995] as a behavioral response by adults to avoid exposing larvae to low temperatures associated with poor survival.",
-  Response="Catch Q3 year t",
+  Life="Spawn",
+  Time="Jun-Sep",
+  Hyp="S3.  Low SST is associated with delayed and limited spawning as a behavioral response by adults to avoid exposing larvae to low temperatures associated with poor survival.",
+  Response="$S_t$",
   Cov="Average SST during Jun-Sep in year t",
   stringsAsFactors=FALSE)
 
 HS4 = data.frame(
-  Life="",
-  Time="",
-  Hyp="HS4.  Extremely high upwelling brings poorly oxygenated water to the surface causing sardines to move offshore [@Pillai1991].",
-  Response="Catch Q3 year t",
+  Life="Spawn",
+  Time="Jun-Sep",
+  Hyp="S4.  Extremely high upwelling brings poorly oxygenated water to the surface causing sardines to move offshore.",
+  Response="$S_t$",
   Cov="Average upwelling index Jun-Sep, Max upwelling index Jun-Sep in year t",
   stringsAsFactors=FALSE)
 
 HS5 = data.frame(
-  Life="",
-  Time="",
-  Hyp="HS5. Salinity changes due to precipitation or river run-off trigger spawning.  After spawning, spent adult move to inshore waters and are exposed to fishery.",
-  Response="Catch Q3 year t",
+  Life="Spawn",
+  Time="Jun-Sep",
+  Hyp="S5. Salinity changes due to precipitation or river run-off trigger spawning.  After spawning, spent adult move to inshore waters and are exposed to fishery.",
+  Response="$S_t$",
   Cov="Average Salinity during Jun-Sep in year t",
   stringsAsFactors=FALSE)
 
 HL1 = data.frame(
-  Life="Larvae",
+  Life="Larv.",
   Time="Jul-Oct",
-  Hyp="HL1.  Larval mortality is higher in colder water due to low motility causing increased predation and slower somatic growth. Low SST is also associated with strong upwelling which advects larvae into offshore waters.",
-  Response="Catch Q4 year t and Q1-2 year t+1",
+  Hyp="L1.  Larval mortality is higher in colder water due to low motility causing increased predation and slower somatic growth. Low SST is also associated with strong upwelling which advects larvae into offshore waters.",
+  Response="$N_t$",
   Cov="Average SST during Jun-Sep, Cum DD Jun-Sep in year t-1",
   stringsAsFactors=FALSE)
 
 HL2 = data.frame(
-  Life="Larvae",
-  Time="",
-  Hyp="HL2. Extremely strong upwelling brings poorly oxygenated water to the surface causing larval mortality and advects larvae offshore.",
-  Response="Catch Q4 year t and Q1-2 year t+1",
+  Life="Larv.",
+  Time="Jul-Oct",
+  Hyp="L2. Extremely strong upwelling brings poorly oxygenated water to the surface causing larval mortality and advects larvae offshore.",
+  Response="$N_t$",
   Cov="Ave. upwelling index Jun-Sep, max upwelling index Jun-Sep in year t-1",
   stringsAsFactors=FALSE)
 
 HJ1 = data.frame(
   Life="Juv.",
   Time="",
-  Hyp="HJ1. Upwelling is associated with higher productivity and higher density of zooplankton, which leads to better larval and juvenile growth and survival.  Thus the strength of upwelling during the monsoon should be associated with higher biomass in subsequent years.",
-  Response="Catch Q4 year t and Q1-2 year t+1",
+  Hyp="J1. Upwelling is associated with higher productivity and higher density of zooplankton, which leads to better larval and juvenile growth and survival.  Thus the strength of upwelling during the monsoon should be associated with higher biomass in subsequent years.",
+  Response="$N_t$",
   Cov="Ave. upwelling index Jun-Sep, max upwelling index Jun-Sep in year t-1 and t-2",
   stringsAsFactors=FALSE)
 
 HJ2 = data.frame(
   Life="Juv.",
   Time="",
-  Hyp="HJ2. Chlorophyll blooms are signatures of high productivity from nutrient influx either due to upwelling or coastal inputs.  Bloom intensity in prior years should be associated with future sardine biomass.",
-  Response="Catch Q4 year t and Q1-2 year t+1",
+  Hyp="J2. Chlorophyll blooms are signatures of high productivity from nutrient influx either due to upwelling or coastal inputs.  Bloom intensity in prior years should be associated with future sardine biomass.",
+  Response="$N_t$",
   Cov="Ave. Chl-a density Jun-Dec, Chl-a density Jun-Dec in year t-1 and t-2",
   stringsAsFactors=FALSE)
 
 HA1 = data.frame(
   Life="All ages",
   Time="Mar-Apr",
-  Hyp="HA1. During the Mar-Apr, the sea temperatures are high and sardines migrate offshore to avoid high temp.",
+  Hyp="A1. During the Mar-Apr, the sea temperatures are high and sardines migrate offshore to avoid high temp.",
   Response="Catch Q2 year t",
   Cov="Ave. SST Q2 year t, max SST Q2 year t",
   stringsAsFactors=FALSE)
 
 hyptable = rbind(DD1,DD2,DD3, HS1,HS2,HS3,HS4,HS5)
-colnames(hyptable)=c("Stage", "Time", "Hypothesis", "Responses", "Covariates")
+hyptable = hyptable[,-2]
+colnames(hyptable)=c("Stage", "Hypothesis", "Resp.", "Covariates")
 
-kable(hyptable, "latex", caption=fullcap) %>%
+kable(hyptable, "latex", caption=fullcap, escape=FALSE) %>%
   kableExtra::kable_styling(full_width=FALSE) %>%
-  kableExtra::column_spec(3, width="8.5cm") %>%
+  kableExtra::column_spec(2, width="8.5cm") %>%
   kableExtra::column_spec(1, width="1cm") %>%
-  kableExtra::column_spec(2, width=".5cm") %>%
-  kableExtra::column_spec(4, width="2cm") %>%
-  kableExtra::column_spec(5, width="3cm")
+  kableExtra::column_spec(3, width="1cm") %>%
+  kableExtra::column_spec(4, width="3cm")
 ```
 
 #
@@ -143,13 +145,13 @@ thecap = "Continued."
 
 fullcap = paste("Table ", ref("tab:hypotheses"), ". ", thecap, sep="")
 hyptable = rbind(HL1,HL2, HJ1,HJ2, HA1)
-colnames(hyptable)=c("Stage", "Time", "Hypothesis", "Responses", "Covariates")
+hyptable = hyptable[,-2]
+colnames(hyptable)=c("Stage", "Hypothesis", "Resp.", "Covariates")
 
-kable(hyptable, "latex", caption=fullcap) %>%
+kable(hyptable, "latex", caption=fullcap, escape=FALSE) %>%
   kableExtra::kable_styling(full_width=FALSE) %>%
-  kableExtra::column_spec(3, width="8.5cm") %>%
+  kableExtra::column_spec(2, width="8.5cm") %>%
   kableExtra::column_spec(1, width="1cm") %>%
-  kableExtra::column_spec(2, width=".5cm") %>%
-  kableExtra::column_spec(4, width="2cm") %>%
-  kableExtra::column_spec(5, width="3cm")
+  kableExtra::column_spec(3, width="1cm") %>%
+  kableExtra::column_spec(4, width="3cm")
 ```
