--- a/Table 3 w Jul-Sep upwelling.Rmd
+++ b/Table 3 w Jul-Sep upwelling.Rmd
@@ -16,8 +16,8 @@ Yr1 = min(dat$Year)
 Yr2 = max(dat$Year)
 covnames=c("SST.4.mon7to9.0", "SST.UPW.4.mon1to3.1")
 covtits =  c("Jul-Sep SST current season", "Jan-Mar UPW prior season")
-dat$cov0=dat[["SST.4.mon7to9.0"]]
-dat$cov1=dat[["SST.UPW.4.mon1to3.1"]]
+dat$cov0=dat[[covnames[1]]]
+dat$cov1=dat[[covnames[2]]]
 m1 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
 m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov1, sp=0.6), data=dat)
 
